examples/datalog/14_aggregations/13_empty_groups.dl.out
Executing script: examples/datalog/14_aggregations/13_empty_groups.dl

> .db create test_empty_agg
Database 'test_empty_agg' created.
Switched to database: test_empty_agg
> .db use test_empty_agg
Switched to database: test_empty_agg
> +data[(1, 10), (2, 20), (3, 30)].
Inserted 3 facts into 'data'.
> +normal_count(count<X>) :- data(X, _).
Script error: Line 14: Parse error: Invalid term: 'count<X>'
